--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 
 <title>Examen TIC</title>
+<style>
+table,th,td{ border:1px solid black;}
+thead{text-align:center}
 
+
+</style>
 <head>
 <title>Examen TIC</title>
-<link rel="stylesheet" href="estilo.css"/>
+
 <h1> Examen TIC</h1>
 
 </head>
@@ -48,3 +53,4 @@
    </table>
    </body>
    </html>
+   
