--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ background-color: green;
 <p>Soy Álvaro Gómez Casas, un alumno de la asignatura TIC impartida por el Kursaal<p>
 
 
-<br><img src="file:///home/usuario/Escritorio/Examen%20TIC/Img/descarga.jpeg
+<br><img src="descarga.jpeg
 " width="200">
 
 <table>
@@ -36,17 +36,17 @@ background-color: green;
 <tbody>
 
  <tr>
-   <td><img src="file:///home/usuario/Escritorio/Examen%20TIC/Img/Dibujo.jpeg
+   <td><img src="Dibujo.jpeg
 " width="200"></td>
    
-   <td><img src="file:///home/usuario/Escritorio/Examen%20TIC/Img/Lectura.jpeg
+   <td><img src="Lectura.jpeg
 " width="200"></td>
    
    </tr>
    <tr>
-    <td><img src="file:///home/usuario/Escritorio/Examen%20TIC/Img/Tenis.jpeg
+    <td><img src="Tenis.jpeg
 " width="200"></td>
-    <td><img src="file:///home/usuario/Escritorio/Examen%20TIC/Img/Videojuegos.jpeg
+    <td><img src="Videojuegos.jpeg
 " width="200"></td>
    
    </tbody>
