--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 table,th,td{ border:1px solid black;}
 thead{text-align:center}
-background-color: green;
+body{background-color:green;;
 
 </style>
 <head>
