--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 table,th,td{ border:1px solid black;}
 thead{text-align:center}
-body{background-color:green;;
+
 
 </style>
 <head>
@@ -15,7 +15,7 @@ body{background-color:green;;
 
 </head>
 
-<body>
+<body style="background-color:green;">
 
 <p>Soy Álvaro Gómez Casas, un alumno de la asignatura TIC impartida por el Kursaal<p>
 
