--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ thead{text-align:center}
 <p>Soy Álvaro Gómez Casas, un alumno de la asignatura TIC impartida por el Kursaal<p>
 
 
-<br><img src="descarga.jpeg
+<br><img src="P.jpg
 " width="200">
 
 <table>
@@ -36,17 +36,17 @@ thead{text-align:center}
 <tbody>
 
  <tr>
-   <td><img src="Dibujo.jpeg
+   <td><img src="D.webp
 " width="200"></td>
    
-   <td><img src="Lectura.jpeg
+   <td><img src="L.jpg
 " width="200"></td>
    
    </tr>
    <tr>
-    <td><img src="Tenis.jpeg
+    <td><img src="T.webp
 " width="200"></td>
-    <td><img src="Videojuegos.jpeg
+    <td><img src="V.webp
 " width="200"></td>
    
    </tbody>
