--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ thead{text-align:center}
 <body style="background-color:green;">
 
 <p>Soy Álvaro Gómez Casas, un alumno de la asignatura TIC impartida por el Kursaal<p>
-
+<a target="_blank" href="">Visitanos</a>
 
 <br><img src="P.jpg
 " width="200">
