--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 table,th,td{ border:1px solid black;}
 thead{text-align:center}
-
+a{ border:1px solid black;}
 
 </style>
 <head>
@@ -18,7 +18,7 @@ thead{text-align:center}
 <body style="background-color:green;">
 
 <p>Soy Álvaro Gómez Casas, un alumno de la asignatura TIC impartida por el Kursaal<p>
-<a target="_blank" href="">Visitanos</a>
+<a target="_blank" href="https://alvaro770.github.io/Alvaro771.github.io/">Visitanos</a>
 
 <br><img src="P.jpg
 " width="200">
